--- a/html/index.html
+++ b/html/index.html
@@ -39,6 +39,7 @@
           <li>3 cups chopped kale</li>
           <li>3 cloves garlic minced</li>
         </ul>
+        <p>thank you for reading</p>
       </article>
     </main>
   </body>
